syntax = "proto3";

option csharp_namespace = "GrpcServer_PI_21_01";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package data;

service DataRetriever {
  rpc GetContract (IdRequest) returns (ContractReply);
  rpc GetContracts (DataRequest) returns (ContractsReply);
  rpc GetContractsPageCount (DataRequest) returns (PageCount);
  rpc AddContract (ContractReply) returns (OperationResult);
  rpc RemoveContract (IdRequest) returns (OperationResult);
  rpc UpdateContract (ContractReply) returns (OperationResult);

  rpc GetLocation (IdRequest) returns (LocationReply);
  rpc GetLocations (DataRequest) returns (stream LocationReply);
  rpc GetLocationsPageCount (DataRequest) returns (PageCount);
  rpc AddLocation (LocationReply) returns (OperationResult);
  rpc RemoveLocation (IdRequest) returns (OperationResult);
  rpc UpdateLocation (LocationReply) returns (OperationResult);

  rpc GetOrganization (IdRequest) returns (OrganizationReply);
  rpc GetOrganizations (DataRequest) returns (stream OrganizationReply);
  rpc GetOrganizationsPageCount (DataRequest) returns (PageCount);
  rpc AddOrganization (OrganizationReply) returns (OperationResult);
  rpc RemoveOrganization (IdRequest) returns (OperationResult);
  rpc UpdateOrganization (OrganizationReply) returns (OperationResult);

  rpc GetAct (IdRequest) returns (ActReply);
  rpc GetActs (DataRequest) returns (stream ActReply);
  rpc GetActsPageCount (DataRequest) returns (PageCount);
  rpc AddAct (ActReply) returns (OperationResult);
  rpc RemoveAct (IdRequest) returns (OperationResult);
  rpc UpdateAct (ActReply) returns (OperationResult);

  rpc GetApp (IdRequest) returns (ApplicationReply);
  rpc GetApps (DataRequest) returns (stream ApplicationReply);
  rpc GetAppsPageCount (DataRequest) returns (PageCount);
  rpc AddApp (ApplicationReply) returns (OperationResult);
  rpc RemoveApp (IdRequest) returns (OperationResult);
  rpc UpdateApp (ApplicationReply) returns (OperationResult);

  rpc GetAnimalCard (IdRequest) returns (AnimalCardReply);
  rpc GetAnimalCards (DataRequest) returns (stream AnimalCardReply);
  rpc GetAnimalCardsPageCount (DataRequest) returns (PageCount);
  rpc RemoveAnimalCard (IdRequest) returns (OperationResult);
  rpc AddAnimalCard (AnimalCardReply) returns (OperationResult);
  rpc UpdateAnimalCard (AnimalCardReply) returns (OperationResult);

  rpc GetOperations (DataRequest) returns (stream OperationReply);
  rpc GetOperationsPageCount (DataRequest) returns (PageCount);

  rpc GetActApp (IdRequest) returns (ActAppReply);
  rpc GetActApps (DataRequest) returns (stream ActAppReply);
  rpc GetActAppsCount (DataRequest) returns (PageCount);
  rpc AddActApps (ActAppReply) returns (OperationResult);
  rpc UpdateActApps (ActAppReply) returns (OperationResult);
  rpc RemoveActApps (IdRequest) returns (OperationResult);

  rpc GetLocationContract (IdRequest) returns (LocationContractReply);
  rpc GetLocationContracts (DataRequest) returns (stream LocationContractReply);
  rpc GetLocationContractsPageCount (DataRequest) returns (PageCount);
  rpc AddLocationContract (LocationContractReply) returns (OperationResult);
  rpc UpdateLocationContract (LocationContractReply) returns (OperationResult);
  rpc RemoveLocationContract (IdRequest) returns (OperationResult);
}

message IdRequest {
  int32 id = 1;
  UserReply actor = 2;
}

message DataRequest {
	UserReply actor = 1;
	FilterReply filter = 2;
	int32 page = 3;
}

message PageCount {
	int32 count = 1;
}

message OperationResult {
	bool successful = 1;
	google.protobuf.Int32Value modifiedId = 2;
}

message ContractReply {
  int32 idContract = 1;
  google.protobuf.Timestamp dateConclusion = 2;
  google.protobuf.Timestamp actionDate = 3;
  LocationReply locationCost = 4;
  int32 cost = 5;
  OrganizationReply executer = 6;
  OrganizationReply costumer = 7;
  UserReply actor = 8;
}

message ContractsReply {
	repeated ContractReply contracts = 1;
}

message LocationReply {
  int32 idLocation = 1;
  string city = 2;
  UserReply actor = 3;
}

enum OrganizationType {
	DirectoryValues = 0;
	GovernmentExecutive = 1;
	LocalGovernment = 2;
	Shelter = 3;
	Trapping = 4;
	TrappingAndShelter = 5;
	Transportation = 6;
	VetClinicState = 7;
	VetClinicMunicipal = 8;
	VetClinicPrivate = 9;
	CharityFoundation = 10;
	AnimalGoodsSeller = 11;
	Applicant = 12;
}

message OrganizationReply {
	int32 idOrganization = 1;
	string name = 2;
	string INN = 3;
	string KPP = 4;
	LocationReply registrationAddress = 5;
	OrganizationType type = 6;
	string status = 7;
	UserReply actor = 8;
}

message ActReply {
	int32 actNumber = 1;
	int32 countDogs = 2;
	int32 countCats = 3;
	OrganizationReply organization = 4;
	google.protobuf.Timestamp date = 5;
	string targetCapture = 6;
	ApplicationReply app = 7;
	ContractReply contract = 8;
	UserReply actor = 9;
}

message ApplicationReply {
	google.protobuf.Timestamp date = 1;
	int32 number = 2;
	LocationReply locality = 3;
	string territory = 4;
	string animalHabitat = 5;
	string urgencyOfExecution = 6;
	string animalDescription = 7;
	string applicantCategory = 8;
	AppStatus status = 9;
	UserReply actor = 10;
}

message AnimalCardReply {
	int32 idAnimalCard = 1;
	string category = 2;
	string gender = 3;
	string breed = 4;
	int32 size = 5;
	string furType = 6;
	string color = 7;
	string ears = 8;
	string tail = 9;
	string specialSigns = 10;
	string identificationLabel = 11;
	LocationReply locality = 12;
	ActReply captureAct = 13;
	UserReply actor = 14;
}

message UserReply {
	int32 userId = 1;
	string name = 2;
	string surname = 3;
	string patronymic = 4;
	OrganizationReply organization = 5;
	string privelegeLevel = 6;
	string login = 7;
}

enum ActionType {
	ACTION_ADD = 0;
	ACTION_DELETE = 1;
	ACTION_UPDATE = 2;
}

message OperationReply {
	int32 operationId = 1;
	UserReply user = 2;
	int32 modifiedObjectId = 3;
	string modifiedTableName = 4;
	ActionType action = 5;
	google.protobuf.Timestamp date = 6;
}

message ActAppReply {
	int32 id = 1;
	ActReply act = 2;
	ApplicationReply app = 3;
	UserReply actor = 4;
}

message LocationContractReply {
	int32 id = 1;
	LocationReply location = 2;
	ContractReply contract = 3;
	double price = 4;
	UserReply actor = 5;
}

enum AppStatus {
    Awaiting_Registration = 0;
    Registered = 1;
    Performed = 2;
    Fulfilled = 3;
    Removed = 4;
}

message FilterReply {
	repeated string andEquations = 1;
	repeated string orEquations = 2;
	repeated string innerEquations = 3;
}